# zos

./: .dockerignore  .gitignore  .golangci.yml  .travis.yml  CODEOWNERS  CONTRIBUTING.md  DEVELOPMENT.md  LICENCE  LICENSE  Makefile  README.md  VALUES.md  go.mod  go.sum  openrpc.json  realmesh.sh  util.go
.github/: PULL_REQUEST_TEMPLATE.md
.try/: main.go
assets/: 0-OS v2 architecture(4).xml  0-OS v2 architecture.xml  0-OS-upgrade.wsd  boot_sequence.plantuml  grid_provisioning.wsd  grid_provisioning2.wsd  inter_node_wireguard.wsd  ipc.plantuml
autobuild/: zos.sh
bins/: README.md  bins-extra.sh
bootstrap/: Cargo.toml  Makefile
bootstrap/bootstrap/: Cargo.toml  Makefile  README.md
bootstrap/bootstrap/src/: bootstrap.rs  config.rs  hub.rs  kparams.rs  main.rs  workdir.rs  zfs.rs  zinit.rs
bootstrap/etc/zinit/: bootstrap.yaml  internet.yaml
bootstrap/etc/zinit/init/: bootstrap.sh
bootstrap/src/: hub.rs  main.rs
bootstrap/usr/share/udhcp/: probe.script  prope.script
client/: README.md  client.go  multi.go  node.go  node_test.go  proxy.go
cmds/: Makefile
conf/: contd.yaml  flistd.yaml  node-ready.yaml  readme.md  storaged.yaml  upgraded.yaml
docs/: readme.md  zmachine.md
etc/: sysctl.conf
examples/: container.go
meetings/: nodes_20190801.md  nodes_20190805.md  nodes_20190916.md  notes-20190819.md  notes-20190826.md  notes_20190107.md  notes_20190523.md  notes_20190527.md  notes_20190529.md  notes_20190603.md  notes_20190606.md  notes_20190611.md  notes_20190613.md  notes_20190617.md  notes_20190624.md  notes_20190708.md  notes_20190801.md  notes_20190805.md  notes_20190812.md  notes_20190822.md  notes_20190909.md  notes_20190916.md  notes_20190923.md  notes_20190926.md  notes_20192006.md  notes_20192007.md  notes_20192207.md  session_1.md
modules/: Makefile  README.md  client.go  container.go  environment.go  flist.go  go.mod  go.sum  identity.go  interface.go  network.go  network_encoding.go  network_encoding_test.go  storage.go  zdb.go
modules/storage/: Cargo.toml  README.md  storage.go  zdb.go
modules/storage/filesystem/: btrf_test.go  btrfs.go  btrfs_list.go  btrfs_list_test.go  btrfs_pool.go  btrfs_utils.go  btrfs_utils_test.go  device.go  filesystem.go  utils.go
modules/storage/src/: disks.rs  fs.rs  lib.rs  main.rs  volume.rs
modules/storage/src/executor/: mod.rs  system.rs
modules/storage/storaged/: main.go
network/: Requirements.md
openrpc/: api.json
papers/: README.md  containers.md  logging.md  networking.md
pkg/: .golangci.yaml  Makefile  api_gateway.go  container.go  events.go  flist.go  gateway.go  gen.go  identity.go  mock.go  monitor.go  network.go  network_encoding.go  network_encoding_test.go  network_light.go  os.go  performance_monitor.go  provision.go  qsfsd.go  registrar.go  storage.go  upgrade.go  vm.go  zdb.go  zui.go
qemu/: Makefile  README.md  overlay  revert-vfio.sh  setup-vfio.sh  vm.sh  (+2 more)
(+1827 files in other folders)
