[package]
name = "bootstrap"
version = "0.1.0"
authors = ["Muhamad Azmy <muhamad.azmy+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
shlex = "0.1.1"
reqwest = "0.9.20"
semver = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
