[package]
name = "bootstrap"
version = "0.1.0"
authors = ["Muhamad Azmy <muhamad@incubaid.com>"]
edition = "2018"
build = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retry = "0.5.1"
shlex = "0.1.1"
anyhow = "1.0.38"
reqwest = "0.9.22"
serde = "1.0.102"
serde_json = "1.0.41"
log = "0.4"
simple_logger = "1.3.0"
nix = "0.15.0"
openssl-sys = "*"
walkdir = "2"
clap = "2.33.0"
exec = "0.3.1"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
