[package]
name = "storage"
version = "0.1.0"
authors = ["LeeSmet <lee.smet@hotmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"

[build-dependencies]

[lib]
name = "storage_primitives"
path = "src/lib.rs"

[[bin]]
name = "storage"
path = "src/main.rs"
